# sigmaepsilon.solid.fourier

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  export_requirements.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_pytest_cov.sh  run_pytest_cov_nojit.sh  run_tests_with_coverage.sh  run_tests_with_coverage_nojit.sh
.circleci/: config.yml
.github/: dependabot.yml
apps/fastapi/: README.md  main.py  request.ipynb
apps/plate_calculator_papermill_azure_pyvista/: _00000000001_res2d.parquet  _00000000001_res3d.parquet  main.ipynb  requirements.txt
apps/plate_calculator_papermill_azure_pyvista/outputs/: _00000000001_data.json  _00000000001_plate_concentrated_load.ipynb  _00000000001_plot_with_pyVista.ipynb  _00000000001_upload_to_azure_storage.ipynb
apps/plate_calculator_papermill_azure_pyvista/tasks/: _00000000001.json  clean_up.ipynb  plate_concentrated_load.ipynb  plot_with_pyVista.ipynb  upload_to_azure_storage.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  development.rst  doc_utils.py  examples_gallery.rst  getting_started.ipynb  global_refs.rst  highlights.rst  index.rst  user_guide.rst
docs/source/api/: api_all.rst
docs/source/applications/: plate_concentrated_app.ipynb
docs/source/developer_guide/: documenting.rst  installation.rst  testing.rst
docs/source/examples/: Kirchoff_pyvista.ipynb  Navier_Mindlin_sym.ipynb  _Navier_Kirchhoff_sym.ipynb  _critical_load_combinations.ipynb  _optimize_plate_bga.ipynb  beam_influence_diagrams.ipynb  bernoulli_metplotlib.ipynb  genetic_algorithm.ipynb  mindlin_vs_kirchhoff.ipynb  plate_concentrated_load.ipynb  plate_utils_pyvista.ipynb  timoshenko_matplotlib.ipynb
docs/source/gallery/: Kirchhoff_Love_matplotlib.ipynb  Uflyand_Mindlin_matplotlib.ipynb  bernoulli_metplotlib.ipynb  plate_utils.ipynb  plot_loads_1d.ipynb  timoshenko_matplotlib.ipynb
docs/source/notebooks/: _critical_load_combinations.ipynb  _loads.ipynb  genetic_algorithm.ipynb  mindlin_vs_kirchhoff.ipynb  navier-beam.ipynb  navier-plate.ipynb
docs/source/notebooks/theory/: Navier_Mindlin_sym.ipynb
docs/source/theory_guide/: index.rst
docs/source/user_guide/: index.rst  installation.rst  user_guide.ipynb
notebooks/navier/: mindlin_vs_kirchhoff.ipynb  navier-beam.ipynb  navier-plate.ipynb
notebooks/navier/theory/: Navier_Kirchhoff_sym.ipynb
src/sigmaepsilon/solid/fourier/: __init__.py  beam.py  config.py  enums.py  exceptions.py  loads.py  mc.py  plate.py  postproc.py  preproc.py  problem.py  proc.py  protocols.py  result.py  utils.py
src/sigmaepsilon/solid/fourier/loads/: __init__.py  diskload.py  lineload.py  loads.py  pointload.py  rectangleload.py  tricollection.py
tests/: test_beams.py  test_euler.py  test_loads.py  test_plates.py  test_utils.py
