[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon.solid.fourier"
version = "1.0.0"
description = "Fourier solutions of some plate and beam bending problems in Python"
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = "README.md"
authors = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
maintainers = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
license = "MIT"
keywords = [
    "engineering", "fourier", "benchmark", "mechanics", 
    "solid mechanics", "elasticity", "mindlin", "kirchhoff", "euler",
    "timoshenko", "beam", "plate", "uflyand", "bernoulli", "bensys",
    "programming", "Python"
]
homepage = "https://github.com/sigma-epsilon/sigmaepsilon.solid.fourier"
repository = "https://github.com/sigma-epsilon/sigmaepsilon.solid.fourier"
documentation = "https://sigmaepsilonsolidfourier.readthedocs.io/en/latest/?badge=latest"
packages = [{ include = "sigmaepsilon", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]

[tool.poetry.group.docs.dependencies]
